| Bug #19362 | im_daemon_lifecycle fails when built from source distribution | ||
|---|---|---|---|
| Submitted: | 26 Apr 2006 7:06 | Modified: | 10 May 2006 16:31 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | Instance Manager | Severity: | S2 (Serious) |
| Version: | 5.0.21 | OS: | Any (all) |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[26 Apr 2006 7:06]
Magnus Blåudd
[26 Apr 2006 7:19]
Jim Winstead
it's probably the same problem as Bug #19059, and the patch just needs to be backported.
[26 Apr 2006 9:18]
Magnus Blåudd
The problem is that the function "Instance_options::fill_instance_version()" executes "/home/msvensson/mysql/mysql-5.0.21-standard/sql/mysqld --no-defaults --version" and looks for everything after "/home/msvensson/mysql/mysql-5.0.21-standard/sql/mysqld" to get the version. But when we have a non-installed mysqld compiled with libtool it will give the below ouput: "/home/msvensson/mysql/mysql-5.0.21-standard/sql/.libs/lt-mysqld Ver 5.0.21-standard-max-debug for pc-linux-gnu on i686 (MySQL Pushbuild Edition)" and the function will does not get a match. An error will be returned.
[26 Apr 2006 10:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5559
[27 Apr 2006 14:14]
Joerg Bruehe
Isn't that a duplicate of bug#15934, filed last December for 5.0.18 ?
[27 Apr 2006 19:56]
Magnus Blåudd
Pushed a patch to 5.0.21 that make it possible to run instance manager in a not installed distributions. Ie. when the mysqld binary is either a script or a symlink.
[10 May 2006 16:31]
Paul DuBois
No changelog entry needed.
