Bug#19362 im_daemon_lifecycle fails when built from source distribution - Add function "mysqld_real_path" which is needed if the mysqld_path is a symlink or a script(like libtool) that executes the real mysqld. - Add new variable mysqld_real_path - Use mysqld_real_path from fill_instance_version